kubernetes/mesh-istio-canary/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesh-istio-canary
  labels:
    app: mesh-istio-canary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mesh-istio-canary
      pipecd.dev/variant: primary
  template:
    metadata:
      labels:
        app: mesh-istio-canary
        pipecd.dev/variant: primary
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: helloworld
        image: ghcr.io/pipe-cd/helloworld:latest
        args:
          - server
        ports:
        - containerPort: 9085
