kubernetes/mesh-istio-canary/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mesh-istio-canary
spec:
  hosts:
    - mesh-istio-canary.pipecd.dev
  gateways:
    - mesh-istio-canary
  http:
    - route:
      - destination:
          host: mesh-istio-canary.default.svc.cluster.local
          subset: primary
        weight: 100
      - destination:
          host: mesh-istio-canary.default.svc.cluster.local
          subset: canary
        weight: 0
      - destination:
          host: mesh-istio-canary.default.svc.cluster.local
          subset: baseline
        weight: 0
